# similarity-transformation

./: CMakeLists.txt  LICENSE  README.md  similarity_transformation.h  vcpkg.json
tests/: CMakeLists.txt  test.cc
